feat: Hot Reload Improvements (v3.2.10)

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "dotenv -e .env.local turbo run dev",
+    "dev:backend": "dotenv -e .env.local turbo run dev:backend --filter=backend",
+    "dev:frontend": "dotenv -e .env.local turbo run dev:frontend --filter=frontend",
     "dev:docker": "docker compose -f docker-compose.dev.yml up --build",
     "dev:docker:down": "docker compose -f docker-compose.dev.yml down",
     "dev:docker:clean": "docker compose -f docker-compose.dev.yml down -v --remove-orphans",
