--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backend",
-  "version": "3.2.9",
+  "version": "3.2.10",
   "type": "module",
   "description": "Bare minimum Express 5.1 backend with TypeScript",
   "main": "dist/index.js",
@@ -9,7 +9,8 @@
     "build:dev": "tsup --sourcemap",
     "build:watch": "tsup --watch",
     "start": "node dist/index.js",
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch --clear-screen=false src/index.ts",
+    "dev:backend": "tsx watch --clear-screen=false src/index.ts",
     "clean": "rm -rf dist",
     "lint": "eslint . --max-warnings 0",
     "lint:fix": "eslint . --fix",
