--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,10 +1,11 @@
 {
   "name": "frontend",
-  "version": "3.2.9",
+  "version": "3.2.10",
   "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack --port 12008",
+    "dev:frontend": "next dev --turbopack --port 12008",
     "build": "next build",
     "start": "next start",
     "lint": "next lint --max-warnings 0",
