--- a/turbo.json
+++ b/turbo.json
@@ -35,6 +35,15 @@
     },
     "dev": {
       "cache": false,
+      "persistent": true,
+      "dependsOn": ["^dev"]
+    },
+    "dev:backend": {
+      "cache": false,
+      "persistent": true
+    },
+    "dev:frontend": {
+      "cache": false,
       "persistent": true
     }
   }
