feat: Add mcpdir submodule + Hybrid Search RRF (v3.2.12)
- Add eL1fe/mcpdir submodule (7,600+ MCP servers from 5+ sources)
- Create extract-mcpdir.py script for data extraction
- Generate MCPDIR_INDEX.md with categorized server listings
- Implement HybridSearchService with Reciprocal Rank Fusion (RRF)
- Add quickSearch() and deepSearch() to ToolSearchService
- Update mcp-directories README with mcpdir reference
- Document in LLM_INSTRUCTIONS.md and ROADMAP.md

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "submodules/mcp-directories/mcp-official-servers"]
 	path = submodules/mcp-directories/mcp-official-servers
 	url = https://github.com/modelcontextprotocol/servers
+[submodule "submodules/mcpdir"]
+	path = submodules/mcpdir
+	url = https://github.com/eL1fe/mcpdir.git
