--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "submodules/mcp-shark"]
 	path = submodules/mcp-shark
 	url = https://github.com/mcp-shark/mcp-shark
+[submodule "submodules/cointrade"]
+	path = submodules/cointrade
+	url = https://github.com/robertpelloni/cointrade
+[submodule "submodules/mcp-directories"]
+	path = submodules/mcp-directories
+	url = https://github.com/punkpeye/awesome-mcp-servers
