--- a/example.env
+++ b/example.env
@@ -1,20 +1,20 @@
 NODE_ENV=production
 LOG_LEVEL='errors-only' #'all', 'info', 'errors-only', 'none'
 
-# Database type: postgresql or sqlite
-DATABASE_TYPE=postgresql
-
-# Postgres connection details (used when DATABASE_TYPE=postgresql)
+# Postgres connection details
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_USER=metamcp_user
 POSTGRES_PASSWORD=m3t4mcp
 POSTGRES_DB=metamcp_db
 
-# Database configuration
-# For PostgreSQL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
-# For SQLite: ./data/metamcp.db (or any path to your SQLite file)
+# Database configuration (composed from above vars)
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+
+# Application URL configuration
+# This is the public URL where your application will be accessible
+APP_URL=http://localhost:12008
+NEXT_PUBLIC_APP_URL=http://localhost:12008
 
 # Auth configuration
 BETTER_AUTH_SECRET=your-super-secret-key-change-this-in-production
