--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -9,7 +9,7 @@
     "build:dev": "tsup --sourcemap",
     "build:watch": "tsup --watch",
     "start": "node dist/index.js",
-    "dev": "tsx watch src/index.ts",
+    "dev": "dotenv -e ../../.env -- tsx watch src/index.ts",
     "clean": "rm -rf dist",
     "lint": "eslint . --max-warnings 0",
     "lint:fix": "eslint . --fix",
@@ -30,33 +30,35 @@
     "@trpc/server": "^11.4.1",
     "basic-auth": "^2.0.1",
     "better-auth": "^1.2.9",
+    "better-sqlite3": "^11.6.0",
     "cors": "^2.8.5",
-    "cross-spawn": "^7.0.6",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
-    "execa": "^9.6.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "nanoid": "^5.1.5",
     "pg": "^8.16.0",
-    "shell-quote": "^1.8.3",
-    "spawn-rx": "^5.1.2",
-    "better-sqlite3": "^11.6.0",
     "zod": "^3.25.64"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@types/basic-auth": "^1.1.8",
+    "@types/better-sqlite3": "^7.6.11",
     "@types/cors": "^2.8.19",
     "@types/cross-spawn": "^6.0.6",
     "@types/express": "^4.17.21",
     "@types/node": "^20.0.0",
     "@types/pg": "^8.15.4",
     "@types/shell-quote": "^1.7.5",
-    "@types/better-sqlite3": "^7.6.11",
+    "cross-spawn": "^7.0.6",
+    "dockerode": "^4.0.9",
     "dotenv-cli": "^8.0.0",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9.28.0",
+    "execa": "^9.6.0",
+    "isolated-vm": "^6.0.2",
+    "shell-quote": "^1.8.3",
+    "spawn-rx": "^5.1.2",
     "tsup": "^8.5.0",
     "tsx": "^4.20.3",
     "typescript": "^5.0.0"
