--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,6 +15,7 @@
     "@better-fetch/fetch": "^1.1.18",
     "@hookform/resolvers": "^5.1.1",
     "@modelcontextprotocol/sdk": "1.16.0",
+    "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -42,7 +43,6 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.515.0",
-    "@monaco-editor/react": "^4.6.0",
     "next": "^15.4.8",
     "next-runtime-env": "^3.3.0",
     "next-themes": "^0.4.6",
@@ -62,6 +62,7 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^22.15.3",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
