--- a/turbo.json
+++ b/turbo.json
@@ -5,6 +5,7 @@
     "PORT",
     "APP_URL",
     "DATABASE_URL",
+    "DATABASE_TYPE",
     "BETTER_AUTH_SECRET",
     "NEXT_PUBLIC_APP_URL",
     "OIDC_CLIENT_ID",
@@ -16,26 +17,7 @@
     "OIDC_PROVIDER_ID",
     "TRANSFORM_LOCALHOST_TO_DOCKER_INTERNAL",
     "NODE_ENV",
-    "POSTGRES_CA_CERT",
-    "LOG_LEVEL",
-    "EXTRA_TRUSTED_ORIGINS",
-    "BOOTSTRAP_USERS",
-    "BOOTSTRAP_USER_EMAIL",
-    "BOOTSTRAP_USER_PASSWORD",
-    "BOOTSTRAP_USER_NAME",
-    "BOOTSTRAP_DELETE_OTHER_USERS",
-    "BOOTSTRAP_RECREATE_USER",
-    "BOOTSTRAP_PRESERVE_API_KEYS",
-    "BOOTSTRAP_WARN_PASSWORD_CHANGE",
-    "BOOTSTRAP_ONLY_FIRST_RUN",
-    "BOOTSTRAP_DISABLE_REGISTRATION_UI",
-    "BOOTSTRAP_DISABLE_REGISTRATION_SSO",
-    "BOOTSTRAP_API_KEYS",
-    "BOOTSTRAP_NAMESPACES",
-    "BOOTSTRAP_ENDPOINTS",
-    "BOOTSTRAP_DEBUG",
-    "BOOTSTRAP_ENABLE",
-    "BOOTSTRAP_FAIL_HARD"
+    "POSTGRES_CA_CERT"
   ],
   "tasks": {
     "build": {
@@ -53,6 +35,14 @@
       "dependsOn": ["^check-types"]
     },
     "dev": {
+      "cache": false,
+      "persistent": true
+    },
+    "dev:backend": {
+      "cache": false,
+      "persistent": true
+    },
+    "dev:frontend": {
       "cache": false,
       "persistent": true
     }
