--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@repo/trpc",
-  "version": "0.0.0",
+  "version": "3.6.0",
   "type": "module",
   "private": true,
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup",
-    "dev": "tsup --watch",
+    "dev": "pnpm --filter @repo/zod-types build && tsup --watch",
     "lint": "eslint . --max-warnings 0",
     "lint:fix": "eslint . --fix",
     "clean": "rm -rf dist"
@@ -15,6 +15,7 @@
   "dependencies": {
     "@repo/zod-types": "workspace:*",
     "@trpc/server": "^11.4.1",
+    "trpc-to-openapi": "^2.3.2",
     "zod": "^3.25.64"
   },
   "devDependencies": {
