--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,10 +1,12 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
+  "version": "3.6.30",
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --port 12008",
+    "predev": "node -e \"const fs=require('fs');fs.rmSync('.next',{recursive:true,force:true});\"",
+    "dev": "next dev --port 12008",
+    "prebuild": "node -e \"const fs=require('fs');fs.rmSync('.next',{recursive:true,force:true});\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint --max-warnings 0",
@@ -15,13 +17,16 @@
     "@better-fetch/fetch": "^1.1.18",
     "@hookform/resolvers": "^5.1.1",
     "@modelcontextprotocol/sdk": "1.16.0",
+    "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
@@ -37,30 +42,35 @@
     "@trpc/server": "^11.4.1",
     "@types/react-syntax-highlighter": "^15.5.13",
     "ahooks": "^3.9.0",
-    "better-auth": "^1.4.18",
+    "better-auth": "^1.4.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.515.0",
-    "next": "^15.5.12",
+    "next": "^15.4.8",
+    "next-mdx-remote": "^5.0.0",
     "next-runtime-env": "^3.3.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "prismjs": "^1.30.0",
     "react": "^19.1.2",
     "react-dom": "^19.1.2",
+    "react-markdown": "^9.0.1",
     "react-hook-form": "^7.58.0",
     "react-syntax-highlighter": "^15.6.1",
     "sonner": "^2.0.5",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.18",
+    "tailwindcss": "^4.1.10",
+    "remark-gfm": "^4.0.1",
     "zod": "^3.25.64",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^22.15.3",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
