--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backend",
-  "version": "1.0.0",
+  "version": "3.6.30",
   "type": "module",
   "description": "Bare minimum Express 5.1 backend with TypeScript",
   "main": "dist/index.js",
@@ -13,51 +13,57 @@
     "clean": "rm -rf dist",
     "lint": "eslint . --max-warnings 0",
     "lint:fix": "eslint . --fix",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage",
-    "db:generate": "dotenv -e ../../.env -- drizzle-kit generate",
-    "db:generate:dev": "dotenv -e ../../.env.local -- drizzle-kit generate",
-    "db:migrate": "dotenv -e ../../.env -- drizzle-kit migrate",
-    "db:migrate:dev": "dotenv -e ../../.env.local -- drizzle-kit migrate"
+    "db:generate": "cross-env DATABASE_TYPE=postgresql dotenv -e ../../.env -- drizzle-kit generate",
+    "db:generate:dev": "cross-env DATABASE_TYPE=postgresql dotenv -e ../../.env.local -e ../../.env -- drizzle-kit generate",
+    "db:generate:sqlite": "cross-env DATABASE_TYPE=sqlite dotenv -e ../../.env -- drizzle-kit generate",
+    "db:generate:sqlite:dev": "cross-env DATABASE_TYPE=sqlite dotenv -e ../../.env.local -e ../../.env -- drizzle-kit generate",
+    "db:migrate": "cross-env DATABASE_TYPE=postgresql dotenv -e ../../.env -- drizzle-kit migrate",
+    "db:migrate:dev": "cross-env DATABASE_TYPE=postgresql dotenv -e ../../.env.local -e ../../.env -- drizzle-kit migrate",
+    "db:migrate:sqlite": "cross-env DATABASE_TYPE=sqlite dotenv -e ../../.env -- drizzle-kit migrate",
+    "db:migrate:sqlite:dev": "cross-env DATABASE_TYPE=sqlite dotenv -e ../../.env.local -e ../../.env -- drizzle-kit migrate"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "1.16.0",
+    "@libsql/client": "^0.15.15",
+    "@modelcontextprotocol/sdk": "^1.16.0",
     "@repo/trpc": "workspace:*",
     "@repo/zod-types": "workspace:*",
     "@trpc/server": "^11.4.1",
     "basic-auth": "^2.0.1",
-    "better-auth": "^1.4.18",
+    "better-auth": "^1.2.9",
+    "better-sqlite3": "^11.6.0",
     "cors": "^2.8.5",
-    "cross-spawn": "^7.0.6",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
-    "execa": "^9.6.0",
-    "express": "^5.2.1",
+    "express": "^5.1.0",
     "helmet": "^8.1.0",
     "nanoid": "^5.1.5",
     "pg": "^8.16.0",
-    "shell-quote": "^1.8.3",
-    "spawn-rx": "^5.1.2",
     "zod": "^3.25.64"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@types/basic-auth": "^1.1.8",
+    "@types/better-sqlite3": "^7.6.11",
     "@types/cors": "^2.8.19",
     "@types/cross-spawn": "^6.0.6",
     "@types/express": "^4.17.21",
     "@types/node": "^20.0.0",
     "@types/pg": "^8.15.4",
     "@types/shell-quote": "^1.7.5",
-    "@vitest/coverage-v8": "^4.0.0",
+    "cross-env": "^7.0.3",
+    "cross-spawn": "^7.0.6",
+    "dockerode": "^4.0.9",
     "dotenv-cli": "^8.0.0",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9.28.0",
+    "execa": "^9.6.0",
+    "isolated-vm": "^6.0.2",
+    "shell-quote": "^1.8.3",
+    "spawn-rx": "^5.1.2",
     "tsup": "^8.5.0",
     "tsx": "^4.20.3",
     "typescript": "^5.0.0",
-    "vitest": "^4.0.0"
+    "vitest": "^3.2.4"
   },
   "keywords": [],
   "author": "",
