--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -19,8 +19,8 @@ services:
       - /app/packages/zod-types/node_modules
       - /app/packages/eslint-config/node_modules
       - /app/packages/typescript-config/node_modules
+      - mcpshark_data_dev:/mnt/mcpshark
     environment:
-      LOG_LEVEL: ${LOG_LEVEL:-all}
       # Postgres connection details
       POSTGRES_HOST: ${POSTGRES_HOST:-postgres}
       POSTGRES_PORT: ${POSTGRES_PORT:-5432}
@@ -50,7 +50,7 @@ services:
       - metamcp-network
 
   postgres:
-    image: postgres:16-alpine
+    image: pgvector/pgvector:pg16
     container_name: metamcp-pg-dev
     restart: unless-stopped
     env_file:
@@ -72,8 +72,27 @@ services:
     networks:
       - metamcp-network
 
+  mcpshark:
+    container_name: mcp-shark-dev
+    build:
+      context: ./apps/backend/mcp-shark
+      dockerfile: Dockerfile
+    ports:
+      - "9851:9851" # Server
+      - "9853:9853" # UI
+    environment:
+      - NODE_ENV=development
+    volumes:
+      - ./apps/backend/mcp-shark:/app
+      - /app/node_modules
+      - mcpshark_data_dev:/root/.mcp-shark
+    networks:
+      - metamcp-network
+
 volumes:
   postgres_data_dev:
+    driver: local
+  mcpshark_data_dev:
     driver: local
 
 networks:
