--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,135 +27,6 @@ services:
       
       # Docker networking fix
       TRANSFORM_LOCALHOST_TO_DOCKER_INTERNAL: ${TRANSFORM_LOCALHOST_TO_DOCKER_INTERNAL:-true}
-      
-      # ========================================================================
-      # Bootstrap Configuration Examples
-      # ========================================================================
-      
-      # Multiple Users - Define different users with different roles
-      # BOOTSTRAP_USERS: |
-      #   [
-      #     {
-      #       "email": "admin@company.com",
-      #       "password": "admin-secure-password",
-      #       "name": "System Administrator"
-      #     },
-      #     {
-      #       "email": "developer@company.com",
-      #       "password": "dev-secure-password",
-      #       "name": "Lead Developer"
-      #     },
-      #     {
-      #       "email": "analyst@company.com",
-      #       "password": "analyst-secure-password",
-      #       "name": "Data Analyst"
-      #     }
-      #   ]
-      
-      # API Keys - Assign keys to specific users using user_email
-      # BOOTSTRAP_API_KEYS: |
-      #   [
-      #     {
-      #       "name": "Admin Production Key",
-      #       "is_public": false,
-      #       "user_email": "admin@company.com"
-      #     },
-      #     {
-      #       "name": "Developer Key",
-      #       "is_public": false,
-      #       "user_email": "developer@company.com"
-      #     },
-      #     {
-      #       "name": "Analyst Key",
-      #       "is_public": false,
-      #       "user_email": "analyst@company.com"
-      #     },
-      #     {
-      #       "name": "Public API Key",
-      #       "is_public": true
-      #     }
-      #   ]
-      
-      # Namespaces - Create user-specific workspaces
-      # BOOTSTRAP_NAMESPACES: |
-      #   [
-      #     {
-      #       "name": "Admin Workspace",
-      #       "description": "Administrator's private workspace",
-      #       "is_public": false,
-      #       "user_email": "admin@company.com",
-      #       "update": true
-      #     },
-      #     {
-      #       "name": "Development",
-      #       "description": "Development environment",
-      #       "is_public": false,
-      #       "user_email": "developer@company.com",
-      #       "update": true
-      #     },
-      #     {
-      #       "name": "Analytics",
-      #       "description": "Data analytics workspace",
-      #       "is_public": false,
-      #       "user_email": "analyst@company.com",
-      #       "update": true
-      #     },
-      #     {
-      #       "name": "Shared Resources",
-      #       "description": "Public shared namespace",
-      #       "is_public": true,
-      #       "update": true
-      #     }
-      #   ]
-      
-      # Endpoints - Configure endpoints with different owners and auth settings
-      # Note: Endpoints can optionally specify which namespace they should be created in
-      # BOOTSTRAP_ENDPOINTS: |
-      #   [
-      #     {
-      #       "name": "admin-api",
-      #       "description": "Admin-only API endpoint",
-      #       "namespace": "Production",
-      #       "enable_auth": true,
-      #       "enable_auth_query": false,
-      #       "enable_auth_oauth": true,
-      #       "is_public": false,
-      #       "user_email": "admin@company.com",
-      #       "update": true
-      #     },
-      #     {
-      #       "name": "dev-api",
-      #       "description": "Development API endpoint",
-      #       "namespace": "Development",
-      #       "enable_auth": true,
-      #       "enable_auth_query": true,
-      #       "enable_auth_oauth": false,
-      #       "is_public": false,
-      #       "user_email": "developer@company.com",
-      #       "update": true
-      #     },
-      #     {
-      #       "name": "analytics-api",
-      #       "description": "Analytics API endpoint",
-      #       "namespace": "Analytics",
-      #       "enable_auth": true,
-      #       "enable_auth_query": false,
-      #       "enable_auth_oauth": false,
-      #       "is_public": false,
-      #       "user_email": "analyst@company.com",
-      #       "update": true
-      #     },
-      #     {
-      #       "name": "public-api",
-      #       "description": "Public API endpoint - no auth required",
-      #       "namespace": "Shared Resources",
-      #       "enable_auth": false,
-      #       "enable_auth_query": false,
-      #       "enable_auth_oauth": false,
-      #       "is_public": true,
-      #       "update": true
-      #     }
-      #   ]
     extra_hosts:
       - "host.docker.internal:host-gateway"
     depends_on:
@@ -166,7 +37,7 @@ services:
       - metamcp-network
 
   postgres:
-    image: postgres:16-alpine
+    image: pgvector/pgvector:pg17
     container_name: metamcp-pg
     restart: unless-stopped
     env_file:
@@ -188,8 +59,25 @@ services:
     networks:
       - metamcp-network
 
+  mcpshark:
+    image: node:20-slim
+    container_name: mcp-shark
+    working_dir: /app
+    command: npx -y @mcp-shark/mcp-shark --host 0.0.0.0 --port 9851 --ui-port 9853
+    ports:
+      - "9851:9851" # Server
+      - "9853:9853" # UI
+    environment:
+      - NODE_ENV=production
+    volumes:
+      - mcpshark_data:/root/.mcp-shark
+    networks:
+      - metamcp-network
+
 volumes:
   postgres_data:
+    driver: local
+  mcpshark_data:
     driver: local
 
 networks:
