--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,10 @@ yarn-error.log*
 # Docker Files
 docker-compose.override.yml
 compose.override.yml
+
+# Auto-save artifacts
+.yoke/
+curl_output.txt
+
+apps/backend/mcp.json
+apps/backend/.vibe-config.json
